implementando el contenedor

--- a/index.html
+++ b/index.html
@@ -12,5 +12,45 @@
     <p>Currículum Vitae</p>
     <button id="btnTheme" aria-pressed="false">Cambiar tema</button>
   </header>
+  <div class="container">
+    <!-- COLUMNA IZQUIERDA -->
+    <aside>
+      <img src="https://via.placeholder.com/150" alt="Foto de Laura Alejandra Vega Claros">
+      <h2>Datos Personales</h2>
+      <ul>
+        <li><strong>Email:</strong> laura.vega@email.com</li>
+        <li><strong>Teléfono:</strong> +591 70000000</li>
+        <li><strong>Ciudad:</strong> Bolivia</li>
+      </ul>
+    </aside>
+
+    <!-- COLUMNA DERECHA -->
+    <main>
+      <section>
+        <h2>Carrera</h2>
+        <p>Profesional en el área de Informática, con experiencia en soporte técnico, mantenimiento de equipos y gestión de sistemas.</p>
+      </section>
+
+      <section>
+        <h2>Estudios</h2>
+        <ul>
+          <li>Licenciatura en Informática – Universidad (año – año)</li>
+          <li>Diplomado/Certificación en Redes y Soporte Técnico</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Experiencia Laboral</h2>
+        <ul>
+          <li><strong>Técnico en Soporte Informático</strong> – Empresa X (año – año)<br>
+              Instalación, mantenimiento y reparación de equipos de cómputo.
+          </li>
+          <li><strong>Asistente de Sistemas</strong> – Empresa Y (año – año)<br>
+              Gestión de redes, copias de seguridad y soporte a usuarios.
+          </li>
+        </ul>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
