--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
       </section>
     </main>
   </div>
+  <footer>
+    <p>&copy; 2025 Laura Alejandra Vega Claros</p>
+  </footer>
 </body>
 </html>
