--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <img src="https://via.placeholder.com/150" alt="Foto de Laura Alejandra Vega Claros">
       <h2>Datos Personales</h2>
       <ul>
-        <li><strong>Email:</strong> laura.vega@email.com</li>
-        <li><strong>Teléfono:</strong> +591 70000000</li>
-        <li><strong>Ciudad:</strong> Bolivia</li>
+        <li><strong>Email:</strong> laualevgaclaros@gmail.com</li>
+        <li><strong>Celular:</strong> 61832844</li>
+        <li><strong>Ciudad:</strong> Oruro - Bolivia</li>
       </ul>
     </aside>
 
@@ -28,25 +28,23 @@
     <main>
       <section>
         <h2>Carrera</h2>
-        <p>Profesional en el área de Informática, con experiencia en soporte técnico, mantenimiento de equipos y gestión de sistemas.</p>
+        <p>Profesional en el área de Informática, con experiencia en soporte técnico, mantenimiento de equipos y diseño gráfico</p>
       </section>
 
       <section>
         <h2>Estudios</h2>
         <ul>
-          <li>Licenciatura en Informática – Universidad (año – año)</li>
-          <li>Diplomado/Certificación en Redes y Soporte Técnico</li>
+          <li>Técnico Superior en Sistemas Informáticos – Instituto Jesús María</li>
         </ul>
       </section>
 
       <section>
         <h2>Experiencia Laboral</h2>
         <ul>
-          <li><strong>Técnico en Soporte Informático</strong> – Empresa X (año – año)<br>
+          <li><strong>Técnico en Soporte Informático</strong> – Empresa Dic Bol 2024<br>
               Instalación, mantenimiento y reparación de equipos de cómputo.
           </li>
-          <li><strong>Asistente de Sistemas</strong> – Empresa Y (año – año)<br>
-              Gestión de redes, copias de seguridad y soporte a usuarios.
+          <li><strong>Encargada de Marketing</strong> – PCHouse 2023<br>
           </li>
         </ul>
       </section>
