--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <!-- COLUMNA IZQUIERDA -->
     <aside>
-      <img src="https://via.placeholder.com/150" alt="Foto de Laura Alejandra Vega Claros">
+      <img src="Lau.jpeg" alt="Laura Alejandra Vega Claros">
       <h2>Datos Personales</h2>
       <ul>
         <li><strong>Email:</strong> laualevgaclaros@gmail.com</li>
