--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currículum Vitae - Laura Alejandra Vega Claros</title>
    <link rel="stylesheet" href="style.css">
-   <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <!-- <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
 </head>
 <body data-theme="light">
   <!-- ENCABEZADO CON NAVEGACIÓN -->
