--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currículum Vitae - Laura Alejandra Vega Claros</title>
    <link rel="stylesheet" href="style.css">
-   <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<!-- <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
 </head>
 <body data-theme="light">
   <!-- ENCABEZADO CON NAVEGACIÓN -->
-  <header class="header" role="banner">
+  <!-- <header class="header" role="banner"> -->
     <div class="container header__container">
       <div class="header__logo" aria-label="Logo con el nombre">Laura Vega Claros</div>
       <nav class="header__nav" role="navigation" aria-label="Navegación principal">
@@ -35,7 +35,7 @@
     <div class="container">
       <h1 id="hero-heading" class="hero__title">Hola, soy <span style="color: var(--color-secondary);">Laura Alejandra Vega Claros</span></h1>
       <h2 class="hero__subtitle">Técnico Superior en Sistemas Informáticos</h2>
-      <p class="hero__text">Profesional en el área de Informática, con experiencia en soporte técnico, mantenimiento de equipos, diseño gráfico y desarrollo de p{áginas web.}.</p>
+      <p class="hero__text">Profesional en el área de Informática, con experiencia en soporte técnico, mantenimiento de equipos, diseño gráfico y desarrollo de páginas web.</p>
       <a href="#contacto" class="btn">Contactar</a>
       <button id="btnDownload" class="btn" style="margin-left: 15px;">Descargar CV</button>
     </div>
