--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currículum Vitae - Laura Alejandra Vega Claros</title>
    <link rel="stylesheet" href="style.css">
-<!-- <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
+<link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body data-theme="light">
   <!-- ENCABEZADO CON NAVEGACIÓN -->
-  <!-- <header class="header" role="banner"> -->
+  <header class="header" role="banner"> 
     <div class="container header__container">
       <div class="header__logo" aria-label="Logo con el nombre">Laura Vega Claros</div>
       <nav class="header__nav" role="navigation" aria-label="Navegación principal">
