--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </div>
         <div class="about__text">
           <p>Soy Laura Alejandra Vega Claros, Técnico Superior en Sistemas Informáticos egresada del Instituto Jesús María. Mi experiencia se centra en soporte técnico, mantenimiento de equipos, diseño gráfico y desarrollo web.</p>
-          <p>Me considero una persona proactiva, responsable y con gran capacidad para resolver problemas técnicos. Disfruto trabajando en entornos desafiantes donde pueda aplicar mis conocimientos y aprender nuevas tecnologías.</p>
+          <p>Me considero una persona proactiva, responsable y con gran capacidad para resolver problemas técnicos.</p> 
+          <p>Disfruto trabajando en entornos desafiantes donde pueda aplicar mis conocimientos y aprender nuevas tecnologías.</p>
           <p>Estoy constantemente actualizando mis conocimientos y habilidades para mantenerme al tanto del avance de la tecnología y informática.</p>
           
           <h3 style="margin-top: 20px;">Datos Personales</h3>
@@ -185,17 +186,17 @@
           <address style="margin-top: 20px; font-style: normal;">
             <p>
               <a href="mailto:laualevgaclaros@gmail.com" class="contact-link">
-                <i class="fas fa-envelope"></i> <strong>Email:</strong> laualevgaclaros@gmail.com
+                <i class="fas fa-envelope"></i> <strong>Email: </strong> laualevgaclaros@gmail.com
               </a>
             </p>
             <p>
               <a href="https://wa.me/59161832844?text=Hola%20Laura,%20vi%20tu%20curriculum%20y%20me%20interesa%20contactarte" class="contact-link" target="_blank">
-                <i class="fas fa-phone"></i> <strong>Celular:</strong> +591 61832844
+                <i class="fas fa-phone"></i> <strong>Celular: </strong> +591 61832844
               </a>
             </p>
             <p>
               <a href="https://www.google.com/maps?q=Oruro,Bolivia" class="contact-link" target="_blank">
-                <i class="fas fa-map-marker-alt"></i> <strong>Ubicación:</strong> Oruro, Bolivia
+                <i class="fas fa-map-marker-alt"></i> <strong>Ubicación: </strong> Oruro, Bolivia
               </a>
             </p>
           </address>
