--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- ENCABEZADO CON NAVEGACIÓN -->
   <header class="header" role="banner"> 
     <div class="container header__container">
-      <div class="header__logo" aria-label="Logo con el nombre">Laura Vega Claros</div>
+      <div class="header__logo" aria-label="Logo con el nombre">Laura Vega</div>
       <nav class="header__nav" role="navigation" aria-label="Navegación principal">
         <ul class="nav__list">
           <li class="nav__item"><a href="#inicio" class="nav__link">Inicio</a></li>
